--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <meta charset="UTF-8">
   
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" type="text/javascript" src="snake.js"></script>
   <script language="javascript" type="text/javascript" src="sketch_170730b.js"></script>
+  
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
  
 
